--- a/src/assets/styles/global/_mixins.scss
+++ b/src/assets/styles/global/_mixins.scss
@@ -1,3 +1,7 @@
+@mixin pageTransition {
+    transition: all 600ms ease-out;
+}
+
 @mixin classicTransition {
-    transition: all 600ms ease-in-out;
+    transition: all 300ms ease-in-out;
 }
