--- a/src/assets/styles/theme.scss
+++ b/src/assets/styles/theme.scss
@@ -4,13 +4,100 @@
 
 // GLOBAL STYLING
 body {
-    background-color: greenyellow;
+    background-color: $dark;
+    color: $white;
+    scrollbar-width: thin;
+    scrollbar-color: $dark $primary;
 }
+
+main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+section {
+    box-sizing: border-box;
+    padding: $space-xxl $space-xxs;
+    width: 100%;
+    max-width: 1400px;
+    display: flex;
+    justify-content: flex-start;
+}
+
+.vertical-display {
+    display: flex;
+    flex-direction: column;
+}
+
+div,
+span,
+p,
+a {
+    font-family: Arial, Helvetica, Verdana, sans-serif;
+    font-size: $font-m;
+}
+
+// Titles
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    color: $white;
+
+    > .__title-colored-primary {
+        background: linear-gradient(270deg, color($primary, 50) 3.94%, color($primary, 80) 90.72%);
+        -webkit-background-clip: text;
+        background-clip: text;
+        color: transparent;
+        letter-spacing: -1px;
+    }
+}
+
+h1 {
+    letter-spacing: $space-s;
+    font-size: $font-xxl;
+    text-transform: lowercase;
+    font-weight: 800;
+    display: flex;
+    flex-direction: column;
+    box-sizing: border-box;
+    line-height: 1;
+    margin: 0;
+    width: fit-content;
+
+    > .__title-colored-primary {
+        font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+        padding: 0;
+        font-size: $font-xxl;
+        font-weight: 800;
+    }
+}
+
+// Links
+
+a {
+    color: color($white, 35);
+    font-weight: 600;
+    text-decoration: none;
+    padding: $space-xs $space-m $space-xs 0;
+    height: fit-content;
+    @include classicTransition;
+    &:hover {
+        color: $white;
+        border-bottom: 4px solid $white;
+    }
+}
+
+// Buttons
 
 // PAGE TRANSITIONS
 .fade-enter-active,
 .fade-leave-active {
-    @include classicTransition();
+    @include pageTransition();
 }
 
 .fade-enter-from,
