--- a/src/assets/styles/theme.scss
+++ b/src/assets/styles/theme.scss
@@ -33,7 +33,10 @@ section {
 div,
 span,
 p,
-a {
+a,
+input,
+textarea,
+label {
     font-family: Arial, Helvetica, Verdana, sans-serif;
     font-size: $font-m;
 }
@@ -45,10 +48,12 @@ h3,
 h4,
 h5,
 h6 {
+    margin: 0;
+    padding-bottom: $space-xl;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     color: $white;
 
-    > .__title-colored-primary {
+    > .title-gradient-primary {
         background: linear-gradient(270deg, color($primary, 50) 3.94%, color($primary, 80) 90.72%);
         -webkit-background-clip: text;
         background-clip: text;
@@ -69,7 +74,7 @@ h1 {
     margin: 0;
     width: fit-content;
 
-    > .__title-colored-primary {
+    > .title-gradient-primary {
         font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
         padding: 0;
         font-size: $font-xxl;
@@ -77,8 +82,15 @@ h1 {
     }
 }
 
-// Links
+.colored-primary {
+    color: $primary;
+}
 
+.colored-secondary {
+    color: $secondary;
+}
+
+// Links
 a {
     color: color($white, 35);
     font-weight: 600;
@@ -92,7 +104,77 @@ a {
     }
 }
 
-// Buttons
+// Form box
+form {
+    box-sizing: border-box;
+    padding: $space-m;
+    display: flex;
+    flex-direction: column;
+    gap: $space-l;
+    background-color: color($dark, 55);
+    border: 2px solid color($white, 10);
+    border-radius: $radius-xs;
+
+    > h3 {
+        padding-bottom: $space-s;
+    }
+
+    @media (max-width: $bp-xs) {
+        width: 100%;
+    }
+}
+// Form items global style
+.input-container {
+    box-sizing: border-box;
+    display: flex;
+    border: 1px solid color($white, 20);
+    border-radius: $radius-xs;
+    position: relative;
+    > label {
+        text-transform: capitalize;
+        position: absolute;
+        top: $space-s;
+        left: $space-m;
+        transition: all 200ms ease-in;
+    }
+    > input,
+    textarea {
+        padding: $space-s $space-m;
+        background-color: transparent;
+        font-weight: 600;
+        border: transparent;
+        width: 300px;
+        min-width: 300px;
+        max-width: 300px;
+        @media (max-width: $bp-xs) {
+            width: auto;
+            min-width: initial;
+            max-width: initial;
+        }
+        &:focus {
+            color: $white;
+            + label {
+                transform: translate(-$space-m, -$space-l);
+                font-size: $font-xs;
+                font-weight: 200;
+            }
+        }
+    }
+    > textarea {
+        min-height: $space-xxxl;
+    }
+    &.has-value {
+        > input {
+            color: $white;
+        }
+        > label,
+        > input:focus + label {
+            transform: translate(-$space-m, -$space-l);
+            font-size: $font-xs;
+            font-weight: 200;
+        }
+    }
+}
 
 // PAGE TRANSITIONS
 .fade-enter-active,
