--- a/src/assets/styles/global/_variables.scss
+++ b/src/assets/styles/global/_variables.scss
@@ -3,6 +3,9 @@ $dark: hsl(330, 16.67%, 4.71%); //#0e0a0c99
 $white: hsl(0, 0%, 100%); //#fff
 $primary: hsl(24.83, 97.13%, 40.98%); //#ce5703
 $secondary: hsl(258.92, 100%, 78.24%); //#b390ff
+$success: hsl(144.83, 97.13%, 40.98%); // #03ce57
+$sky: hsl(204.83, 97.13%, 59.02%); // #31a8fc
+$danger: hsl(324.83, 97.13%, 59.02%); // #fc31a8
 
 // Media-queries breakpoints
 $bp-xxs: 250px;
